# Holographic-Entropy-Cone

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: database-integrity.yml
data/n=1/: contractions.json  facets.json  graphs.json
data/n=2/: contractions.json  facets.json  graphs.json  rays.json
data/n=3/: facets.json  graphs.json  rays.json
data/n=4/: contractions.json  facets.json  graphs.json  rays.json
data/n=5/: contractions.json  facets.json  graphs.json  rays.json
data/n=6/: facets.json  graphs.json  rays.json
examples/: check_ineq_contractions.py  check_ineq_facets.py  check_ray_extremes.py  check_ray_graphs.py  find_ineq_contractions.py  find_ray_graphs.py
n=1/: graphs.txt
n=2/: facets.txt  graphs.txt
n=3/: facets.txt  graphs.txt  rays.txt
n=4/: facets.txt  graphs.txt  rays.txt
n=5/: facets.txt  graphs.txt  rays.txt
n=6/: facets.txt  graphs.txt  rays.txt
src/hec/: __init__.py  _extensions.py  _graph_milp.py  _graph_reductions.py  _graph_search.py  _graph_symmetry.py  _graph_validation.py  bits.py  checks.py  clause_builder.pyx  clause_direct.pyx  contraction_solver.py  contractions.py  coordinates.py  data.py  graphs.py  rank.py  runs.py  serialization.py  symmetry.py  workers.py
tests/: test_checks.py  test_graph_finder.py  test_graph_reductions.py  test_graph_symmetry.py  test_graph_validation.py
tests/fixtures/: graph_finder_cases.json
