[project]
name = "holographic-entropy-cone"
version = "0.1.0"
description = "Holographic Entropy Cone data with contraction and graph algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "highspy>=1.14,<1.15",
  "numba>=0.65",
  "numpy>=1.24",
  "python-sat>=1.9.dev5",
  "pyscipopt>=6.2,<6.3",
  "scipy>=1.11",
]

[dependency-groups]
dev = [
  "cython>=3.2",
  "ruff>=0.11",
  "setuptools>=69",
  "wheel",
]

[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.24", "Cython>=3.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
